[gd_scene load_steps=3 format=2]

[ext_resource path="res://panel_skill.png" type="Texture" id=1]
[ext_resource path="res://src/ui/abilities_nodes/current_abilities/current_abilities.gd" type="Script" id=2]

[node name="Ability_list" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource( 2 )

[node name="Slot_1" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
step = 0.01
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_progress = Color( 0.956863, 0.00784314, 0.00784314, 1 )
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20

[node name="Slot_2" type="TextureProgress" parent="."]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
step = 0.01
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_progress = Color( 0.956863, 0.00784314, 0.00784314, 1 )
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20

[node name="Slot_3" type="TextureProgress" parent="."]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
step = 0.01
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_progress = Color( 0.956863, 0.00784314, 0.00784314, 1 )
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20

[node name="Slot_4" type="TextureProgress" parent="."]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
step = 0.01
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_progress = Color( 0.956863, 0.00784314, 0.00784314, 1 )
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20
